title and description

--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
             <i id="nextBtn" class="fa fa-chevron-right" aria-hidden="true"></i>
           </div>
         </div>
-        <div id='description' style="text-align: center;" class="col-lg">
-          description_1
+        <div id="parent" style="text-align: center;" class="col-lg">
+          <div id='description' >
+            title
+          </div>
+          <div id='description2'>
+            description
+          </div>
         </div>
       </div>
     </div>
